Fix coordinates misalignment and font

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -34,13 +34,15 @@
 	justify-content: flex-start;
 
 	.coorX {
+		font-family: corbel, sans-serif;
+
 		&.hidden {
 			visibility: hidden;
 		}
 
 		#coordinates-table-mixin();
 
-		table td :nth-of-type(3n) {
+		table td:nth-of-type(3n) {
 			border-right: 0.125rem solid transparent;
 		}
 	}
@@ -52,13 +54,15 @@
 		justify-content: center;
 
 		.coorY {
+			font-family: corbel, sans-serif;
+
 			&.hidden {
 				visibility: hidden;
 			}
 
 			#coordinates-table-mixin();
 
-			table tr :nth-of-type(3n) td {
+			table tr:nth-of-type(3n) td {
 				border-bottom: 0.125rem solid transparent;
 			}
 		}
